# life_game

./: .gitignore  CMakeLists.txt  check_neighbour.cpp  check_neighbour.h  cmp_fields.cpp  cmp_fields.h  constants.h  copy_field.cpp  copy_field.h  count_live_neighbours.cpp  count_live_neighbours.h  get_live_count.cpp  get_live_count.h  init_field.cpp  init_field.h  life.cpp  next_generation.cpp  next_generation.h  print.cpp  print.h  template.cpp
